# music-math-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.github/workflows/: cd.txt  cd.yml  ci.yml
benches/: benches.rs
src/: binaryops.rs  interpolation.rs  lib.rs  midi.rs  scaling.rs
tests/: tests.rs
