[package]
name = "music-math"
version = "0.1.0"
authors = ["Mads Kjeldgaard <mail@madskjeldgaard.dk>"]
edition = "2021"
rust-version = "1.56.0"
description = "common functions and helpers for working with music / audio."
# documentation = ""
# homepage = ""
repository = "https://github.com/madskjeldgaard/music-math-rs"
license = "MIT"
keywords = ["music-math"]
categories = ["music", "math", "midi", "audio", "dsp"]

[features]
default = []
full = []

[dependencies]
num-traits = "0.2.18"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1"
approx = "0.5.1"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
features = ["full"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
# required-features = ["full"]
